[project]
name = "rs"
version = "0.1.0"
description = "KOSPI/KOSDAQ Relative Strength Rating Calculator"
requires-python = ">=3.10"
dependencies = [
    "finance-datareader>=0.9.102",
    "numpy>=2.0,<3",
    "pandas>=2.0,<3",
]

[dependency-groups]
dev = [
    "autopep8>=2.0.2",
]

[tool.uv.sources]
